# Derivator

./: CMakeLists.txt  main.cpp
gradient_descent_lib/: Derivator.cpp  Derivator.h
